--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1539,11 +1539,18 @@ form .button-area {
 }
 
 .swiper-container {
+  overflow: hidden;
   margin-top: 50px;
   margin-bottom: 40px;
   width: 80%;
   height: 350px;
   position: relative;
+}
+
+@media (max-width: 450px) {
+  .swiper-container {
+    height: 450px;
+  }
 }
 
 .swiper-slide {
@@ -1560,8 +1567,7 @@ form .button-area {
   text-align: center;
   transition: all 0.3s ease;
   padding: 30px;
-  box-shadow: 0px 4px 6px;
-  
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2); /* Bayangan lebih dalam */
 }
 
 .swiper-slide i {
@@ -1662,6 +1668,7 @@ form .button-area {
   background-color: black;
   opacity: 1;
 }
+
 
 
 /* publication section starts */
