--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,15 +212,27 @@ header .navbar ul li a:hover {
   flex: 1 1 40rem;
   z-index: 1;
 }
-.home .image img {
+.home .image img { 
   width: 70%;
   margin-left: 6rem;
-  border-radius: 50%;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   cursor: pointer;
+  animation: moveUpDown 2s ease-in-out infinite; /* Animasi terus berulang */
 }
+
+@keyframes moveUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-30px); /* Gambar naik */
+  }
+  100% {
+    transform: translateY(0); /* Gambar kembali ke posisi awal */
+  }
+}
+
 .home .image img:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5); */
 }
 .home .content h2 {
   font-size: 5rem;
@@ -256,8 +268,22 @@ header .navbar ul li a:hover {
   background: #2506ad;
   box-shadow: 0px 5px 18px rgba(48, 68, 247, 0.6);
   font-family: "Nunito", sans-serif;
+  animation: moveUpDown 3s ease-in-out infinite;
 }
-.home .btn span {
+
+@keyframes moveUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px); /* Gambar naik */
+  }
+  100% {
+    transform: translateY(0); /* Gambar kembali ke posisi awal */
+  }
+}
+
+.home .btn span {010124
   font-weight: 700;
   font-size: 1.7rem;
   letter-spacing: 0.1rem;
@@ -466,7 +492,7 @@ header .navbar ul li a:hover {
 /* skills section starts */
 .skills {
   min-height: 90vh;
-  background: linear-gradient(to bottom, #57059e, #4a00e0);
+  background: linear-gradient(to bottom, #2c044f,rgb(4, 4, 93));
 }
 .skills h2 {
   color: #fff;
@@ -551,6 +577,7 @@ header .navbar ul li a:hover {
   font-size: 1.5rem;
   text-align: center;
   font-family: "Nunito", sans-serif;
+  text-transform: none;
   font-weight: 600;
   margin-top: 0.5rem;
 }
@@ -805,6 +832,7 @@ header .navbar ul li a:hover {
   font-size: 1.5rem;
   text-align: center;
   font-family: "Nunito", sans-serif;
+  text-transform: none;
   font-weight: 600;
   margin-top: 0.5rem;
   color: white;
@@ -921,7 +949,7 @@ header .navbar ul li a:hover {
 /* certification section starts */
 .certification {
   /* background: #010124; */
-  background: linear-gradient(to bottom, #000031, #00002c);
+  background: linear-gradient(to bottom, #2c044f,rgb(4, 4, 93));
 }
 .certification h2 {
   color: #fff;
@@ -935,6 +963,7 @@ header .navbar ul li a:hover {
   font-size: 1.5rem;
   text-align: center;
   font-family: "Nunito", sans-serif;
+  text-transform: none;
   font-weight: 600;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -1075,6 +1104,7 @@ header .navbar ul li a:hover {
   font-size: 1.5rem;
   text-align: center;
   font-family: "Nunito", sans-serif;
+  text-transform: none;
   font-weight: 600;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -1673,7 +1703,7 @@ form .button-area {
 
 /* publication section starts */
 .publication {
-  background: linear-gradient(to bottom, #57059e, #4a00e0);
+  background: linear-gradient(to bottom, #2c044f,rgb(4, 4, 93));
   min-height: 90vh;
 }
 .publication h1 {
