--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,6 +372,97 @@ header .navbar ul li a:hover {
 /* hero media queries ends*/
 /* hero section end */
 
+function showProjects(projects) {
+    let projectsContainer = document.querySelector("#work .box-container");
+    let projectHTML = "";
+
+    // Tentukan jumlah proyek yang ditampilkan berdasarkan ukuran layar
+    let sliceCount;
+    if (window.matchMedia("(min-width: 1920px)").matches) {
+        sliceCount = 8; // Untuk monitor besar (24 inch atau lebih)
+    } else {
+        sliceCount = 9; // Untuk laptop dan layar lebih kecil
+    }
+
+    projects.slice(0, sliceCount).forEach((project, index) => {
+        projectHTML += `
+        <div class="box tilt">
+            <img draggable="false" src="/assets/images/projects/${project.image}.png" alt="project" />
+            <div class="content">
+                <div class="tag">
+                    <h3>${project.name}</h3>
+                </div>
+                <div class="desc">  
+                <div class="btns">
+                    <button class="btn view-detail-btn" data-index="${index}"><i class="fas fa-eye"></i> View Detail</button>
+                    <a href="${project.links.code}" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+                </div>
+                </div>
+            </div>
+        </div>`;
+    });
+
+    projectsContainer.innerHTML = projectHTML;
+
+    // Tambahkan event listener untuk tombol "View Detail Project"
+    document.querySelectorAll('.view-detail-btn').forEach(button => {
+        button.addEventListener('click', function() {
+            let projectIndex = this.getAttribute('data-index');
+            let project = projects[projectIndex];
+            showModal(project);
+        });
+    });
+
+    // Inisialisasi efek tilt dan scroll reveal
+    VanillaTilt.init(document.querySelectorAll(".tilt"), { max: 15 });
+
+    const srtop = ScrollReveal({ origin: 'top', distance: '80px', duration: 1000, reset: true });
+    srtop.reveal('.work .box', { interval: 200 });
+}
+
+function showCertification(certification) {
+    let certificationContainer = document.querySelector("#certification .box-container");
+    let certificationHTML = "";
+
+    // Tentukan jumlah sertifikasi yang ditampilkan berdasarkan ukuran layar
+    let sliceCount;
+    if (window.matchMedia("(min-width: 1920px)").matches) {
+        sliceCount = 8; // Untuk monitor besar (24 inch atau lebih)
+    } else {
+        sliceCount = 9; // Untuk laptop dan layar lebih kecil
+    }
+
+    certification.slice(0, sliceCount).forEach((certif) => {
+        certificationHTML += `
+        <div class="box tilt">
+            <img draggable="false" src="/assets/images/certifications/${certif.image}.png" alt="certification" />
+            <div class="content">
+                <div class="tag">
+                    <h3>${certif.name}</h3>
+                </div>
+            </div>
+        </div>`;
+    });
+
+    certificationContainer.innerHTML = certificationHTML;
+
+    // Inisialisasi efek tilt dan scroll reveal
+    VanillaTilt.init(document.querySelectorAll(".tilt"), { max: 15 });
+
+    const srtop = ScrollReveal({ origin: 'top', distance: '80px', duration: 1000, reset: true });
+    srtop.reveal('.work .box', { interval: 200 });
+}
+
+// Tambahkan event listener untuk memantau perubahan ukuran layar
+window.addEventListener("resize", () => {
+    showProjects(projects); // Panggil ulang fungsi saat ukuran layar berubah
+    showCertification(certification); // Panggil ulang fungsi sertifikasi saat ukuran layar berubah
+});
+
+// Panggilan awal fungsi
+showProjects(projects);
+showCertification(certification);
+
 /* about section starts */
 .about {
   background: rgb(255, 255, 255);
@@ -389,7 +480,7 @@ header .navbar ul li a:hover {
 }
 .about .row .image img {
   margin: 4rem;
-  margin-top: 8rem;
+  margin-top: 12rem;
   width: 38rem;
   height: auto;
   border-radius: 5%;
@@ -397,7 +488,6 @@ header .navbar ul li a:hover {
   mix-blend-mode: luminosity;
   transition: 0.3s;
   cursor: pointer;
-  
 }
 .about .row .image img:hover {
   mix-blend-mode: normal;
@@ -465,7 +555,13 @@ header .navbar ul li a:hover {
 .resumebtn .btn:hover i {
   transform: translateX(5px);
 }
-/* about media queries starts*/
+
+@media (min-width: 1920px) {
+  .about .row .image img {
+    margin-top: 8rem;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .about .row .image {
     margin-top: 2rem;
@@ -486,6 +582,7 @@ header .navbar ul li a:hover {
     gap: 0;
   }
 }
+
 /* about media queries ends*/
 /* about section ends */
 
@@ -844,6 +941,7 @@ header .navbar ul li a:hover {
 .work {
   /* background: #010124; */
   background: linear-gradient(to bottom, #000031, #00002c);
+  /* min-height: 80vh; */
 }
 .work h2 {
   color: #fff;
@@ -974,6 +1072,8 @@ header .navbar ul li a:hover {
 .certification {
   /* background: #010124; */
   background: linear-gradient(to bottom, #2c044f,rgb(4, 4, 93));
+  /* min-height: 80vh; */
+
 }
 .certification h2 {
   color: #fff;
@@ -1813,9 +1913,13 @@ form .button-area {
     flex-direction: column;
     width: 100%;
   }
+  .publication .box-container .box .content h3 {
+    text-align: center;
+    font-size: 2rem;
+  }
   .publication .box-container .box .image {
     width: 100%;
-    height: 25rem;
+    flex: 1 1 20rem;
   }
   .publication .box-container .box img {
     width: 100%;
